# broadcasting_exercises

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  pyproject.toml
broadcasting_exercises/: grading.py  tests.py
exercises/: 01_basic_basics.ipynb
