[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "broadcasting_exercises"
dynamic = ["version"]
authors = [
  { name="Jesse Grabowski" },
]
description = "Exercises for learning broadcasting within the array API framework"

dependencies = [
    "numpy",
    "Ipython"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
]

[project.urls]
"Homepage" = "https://github.com/jessegrabowski/broadcasting_exercises"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "broadcasting_exercises/_version.py"
